--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <!-- Strings for Dashboard -->
 
     <!--Categories-->
-    <string name="restaurant">Oleh-Oleh</string>
+    <string name="restaurant">Makanan Khas Daerah</string>
     <string name="hotels">Penginapan</string>
     <string name="wisata">Wisata</string>
     <string name="zoo">Kebun Binatang</string>
